@@ -2,6 +2,8 @@
 	- minor Makefile fixup.
 	- moved module-stack code out of daemon/daemon into services/modstack,
 	  preparing for code-reuse.
+	- move context into own header file.
+	- context query structure.
 
 3 December 2007: Wouter
 	- changed checkconf/ to smallapp/ to make room for more support tools.
